--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <script src="/js/Particle/index.js"></script>
         <script src="js/Life.js"></script>
         <script src="js/life.js"></script>
-        <script src="/js/UI.js"></script>
+        <script src="js/UI.js"></script>
     </head>
     <body>
         <div class="container relative">
@@ -24,8 +24,8 @@
                 <hr />
                 <div id="rulesListContainer">
                     <hr />
-                    <h5>Group List</h5>
-                    <div id="groupList"></div>
+                    <h5>Rules List</h5>
+                    <div id="rulesList"></div>
                 </div>
             </div>
             <canvas id="life-canvas" width="500" height="500"> </canvas>
